Bug 166068 - Paste Special does not work into Notes Pane
Summary: Paste Special does not work into Notes Pane
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: Notes-View
  Show dependency treegraph
 
Reported: 2025-04-07 13:32 UTC by Gabor Kelemen (Collabora)
Modified: 2025-04-09 14:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file to paste from (12.81 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-04-07 13:32 UTC, Gabor Kelemen (Collabora)
Details
Result of paste as RTF while the cursor was in the NP (99.36 KB, image/png)
2025-04-07 13:33 UTC, Gabor Kelemen (Collabora)
Details
Paste from Word with Ctrl-V into NP works (110.85 KB, image/png)
2025-04-07 13:45 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-04-07 13:32:51 UTC
Created attachment 200200 [details]
Example file to paste from

Using Paste Special dialog or the split Paste buttons formats while the cursor is in the Notes Pane results in a textbox in the main Slide/Notes view, instead of pasting formatted text into the Notes Pane

1. Open a new presentation
2. Enable View - Notes Pane
3. Copy some formatted text from a browser window or external app like MS Word
4. Click into the Notes Pane, press Ctrl-V
-> The text is pasted as plain text correctly into the Notes Pane
5. Press the split Paste button on the Formatting toolbar (or Edit - Paste Special - Paste Special) and select any of the options
-> Text is pasted into the main Slide or Notes view, inside a textbox

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dcd3427149c33852428b4198c22f6f858125c294
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2025-04-07 13:33:44 UTC
Created attachment 200201 [details]
Result of paste as RTF while the cursor was in the NP
Comment 2 Gabor Kelemen (Collabora) 2025-04-07 13:45:32 UTC
Created attachment 200202 [details]
Paste from Word with Ctrl-V into NP works
Comment 3 Commit Notification 2025-04-09 12:02:36 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/543fea4c360b18cea0ccdd13f03f7a3fe05ae4bb

related tdf#166068: sd: make paste-special html paste into current textedit

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-04-09 14:54:24 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3edd54cd912c739ecfdf166437db627fa03c1cc7

tdf#166068: support paste-special slot for notes pane

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.